--- a/store.html
+++ b/store.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalise.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>HTML Academy: Нёрдс</title>
   </head>
@@ -11,19 +11,19 @@
 <!--Верхняя панель ХЕЙДЕР-->
     <header>
       <div class="head_up">
-        <a href="#"><img src="img/nerds-logo.svg" class="nerds_logo" alt="Nerds" width="160" height="65"></a>
+        <a href="index.html"><img src="img/nerds-logo.svg" class="nerds_logo" alt="Nerds" width="160" height="65"></a>
         <nav class="site_nav">
           <ul class="nav_list">
-            <li class="nav_item"><a href="">СТУДИЯ</a></li>
-            <li class="nav_item"><a href="">КЛИЕНТЫ</a></li>
-            <li class="nav_item nav_active">МАГАЗИН</li>
-            <li class="nav_item"><a href="">КОНТАКТЫ</a></li>
+            <li class="nav_item"><a href="">Студия</a></li>
+            <li class="nav_item"><a href="">Клиенты</a></li>
+            <li class="nav_item nav_active">Магазин</li>
+            <li class="nav_item"><a href="">Контакты</a></li>
           </ul>
         </nav>
 <!--КОРЗИНА<img src="img/basket-icon.png" alt="Корзина" class="basket_ico" width="15" height="15">-->
         <div class="cart nav_item">
           <img src="img/basket-icon.png" alt="Корзина" class="basket_ico" width="15" height="15">
-          <a href="" class="cart_ico">КОРЗИНА</a>
+          <a href="" class="cart_ico">Корзина</a>
         </div>
       </div>
     </header>
@@ -39,52 +39,52 @@
 <!--==ФОРМА============-->
         <form action="" type="post" class="form_presets">
           <div class="parametrs_coast">
-            <p>СТОИМОСТЬ:</p>
+            <p>Стоимость:</p>
             <input type="range" min="0" max="25000" step="1000" value="5000">
             <br>
             <input type="text" name="coast_min" id="coast_min_id" size="5">
             <input type="text" name="coast_max" id="coast_max_id" size="5">
           </div>
           <div class="parametrs_web">
-            <p class="grid">СЕТКА:</p>
+            <p class="grid">Сетка:</p>
             <label for="adapt_id">
               <input type="radio" name="grid" id="adapt_id" value="adapt" checked>
-              АДАПТИВНАЯ
+              Адаптивная
             </label>
             <br>
             <label for="fixed_id">
               <input type="radio" name="grid" id="fixed_id" value="fixed">
-              ФИКСИРОВАННАЯ
+              Фиксированная
             </label>
             <br>
-            <label for="grid_id">
+            <label for="strach_id">
               <input type="radio" name="grid" id="strach_id" value="strach">
-              РЕЗИНОВАЯ
+              Резиновая
             </label>
           </div>
           <div class="parametrs_option">
-            <p class="features">ОСОБЕННОСТИ:</p>
-            <label>
+            <p class="features">Особенности:</p>
+            <label for="slider_id">
               <input type="checkbox" name="slider" id="slider_id" checked>
               Слайдер
             </label>
             <br>
-            <label>
+            <label for="advantage_id">
               <input type="checkbox" name="advantage" id="advantage_id">
               Блок преимуществ
             </label>
             <br>
-            <label>
+            <label for="news_id">
               <input type="checkbox" name="news" id="news_id">
               Новости
             </label>
             <br>
-            <label>
+            <label for="gelery_id">
               <input type="checkbox" name="galery" id="gelery_id">
               Галерея
             </label>
             <br>
-            <label>
+            <label for="cart_id">
               <input type="checkbox" name="cart" id="cart_id">
               Корзина
             </label>
@@ -96,12 +96,12 @@
       <section class="product_prev">
   <!--====ФОРМА СОРТИРОВКИ====-->
         <div class="sort_txt">
-          <p>СОРТИРОВАТЬ:</p>
+          <p>Сортировать:</p>
         </div>
         <div class="sort_form">
-          <button type="button" name="cost_sort">ПО ЦЕНЕ</button>
-          <button type="button" name="type_sort">ПО ТИПУ</button>
-          <button type="button" name="name_sort">ПО НАЗВАНИЮ</button>
+          <button type="button" name="cost_sort">по цене</button>
+          <button type="button" name="type_sort">по типу</button>
+          <button type="button" name="name_sort">по названию</button>
           <button type="button" name="sort_up">v</button>
           <button type="button" name="sort_down">^</button>
         </div>
@@ -110,11 +110,11 @@
 <!--1--><div class="product">
           <img src="img/browser.png" alt="browser" width="360" height="40" class="browser_img">
           <a href="">
-            <img src="img\img-sedona-jpg.png" alt="Sedona" width="360" height="576">
+            <img src="img/img-sedona-jpg.png" alt="Sedona" width="360" height="576">
           </a>
           <div class="hidden_prod_inf">
             <p class="prod_name">Sedona</p>
-            <p class="prod_description">Информационный сайт 
+            <p class="prod_description">Информационный сайт
               для туристов</p>
             <button type="button" name="sedona" id="sedona_prod" class="sedona">9 900 РУБ.</button>
           </div>
@@ -123,37 +123,37 @@
 <!--2--><div class="product">
           <img src="img/browser.png" alt="browser" width="360" height="40" class="browser_img">
           <a href="">
-            <img src="img\img-pink-jpg.png" alt="Pink" width="360" height="576">
+            <img src="img/img-pink-jpg.png" alt="Pink" width="360" height="576">
           </a>
           <div class="hidden_prod_inf">
             <p class="prod_name">Pink App</p>
             <p class="prod_description">Продуктовый лендинг
               приложения для iOS и Android</p>
             <button type="button" name="pinkapp" id="pinkapp_prod" class="pinkapp">9 900 РУБ.</button>
-          </div>        
+          </div>
         </div>
 
 <!--3--><div class="product">
           <img src="img/browser.png" alt="browser" width="360" height="40" class="browser_img">
           <a href="">
-            <img src="img\img-barbershop-jpg.png" alt="Barbershop" width="360" height="576">
+            <img src="img/img-barbershop-jpg.png" alt="Barbershop" width="360" height="576">
           </a>
           <div class="hidden_prod_inf">
             <p class="prod_name">Barbershop</p>
             <p class="prod_description">Сайт салона красоты. <br>
               Для мужчин, да.</p>
             <button type="button" name="barber" id="barber_prod" class="barber">9 900 РУБ.</button>
-          </div>        
+          </div>
         </div>
 
 <!--4--><div class="product">
           <img src="img/browser.png" alt="browser" width="360" height="40" class="browser_img">
           <a href="">
-            <img src="img\img-mishka-jpg.png" alt="Mishka" width="360" height="576">
+            <img src="img/img-mishka-jpg.png" alt="Mishka" width="360" height="576">
           </a>
           <div class="hidden_prod_inf">
-            <p class="prod_name">MISHKA</p>
-            <p class="prod_description">Интернет-магазин 
+            <p class="prod_name">Mishka</p>
+            <p class="prod_description">Интернет-магазин
               вязаных игрушек</p>
             <button type="button" name="mishka" id="mishka_prod" class="mishka">9 900 РУБ.</button>
           </div>
@@ -162,7 +162,7 @@
 <!--5--><div class="product">
           <img src="img/browser.png" alt="browser" width="360" height="40" class="browser_img">
           <a href="">
-            <img src="img\img-aplus-jpg.png" alt="Aplus" width="360" height="576">
+            <img src="img/img-aplus-jpg.png" alt="Aplus" width="360" height="576">
           </a>
           <div class="hidden_prod_inf">
             <p class="prod_name">A Plus</p>
@@ -174,10 +174,10 @@
 <!--6--><div class="product">
           <img src="img/browser.png" alt="browser" width="360" height="40" class="browser_img">
           <a href="">
-            <img src="img\img-kvast-jpg.png" alt="Kvast" width="360" height="576">
+            <img src="img/img-kvast-jpg.png" alt="Kvast" width="360" height="576">
           </a>
           <div class="hidden_prod_inf">
-            <p class="prod_name">КВАСТ</p>
+            <p class="prod_name">Кваст</p>
             <p class="prod_description">Промо-сайт производителя
               крафтового кваса</p>
             <button type="button" name="kvast" id="kvast_prod" class="kvast">9 900 РУБ.</button>
@@ -189,13 +189,13 @@
     <section class="map">
       <h2 class="visually-hidden">Обратная связь</h2>
       <div class="adress">
-        <p class="contact_name">NЁRDS DESIGN STUDIO</p>
-        <P class="contact_adress">191186, Санкт-Петербург,<br>
-        ул. Б. Конюшенная, д. 19/8 
-        <br>
-        <br>
-        тел. +7 (812) 275-75-75</P>
-        <button type="button" name="scribe" class="contact_red_button">НАПИШИТЕ НАМ</button>
+        <p class="contact_name">Nёrds design studio</p>
+        <p class="contact_adress">191186, Санкт-Петербург,<br>
+            ул. Б. Конюшенная, д. 19/8
+          <br>
+          <br>
+            тел. +7 (812) 275-75-75</p>
+        <button type="button" name="scribe" class="contact_red_button">напишите нам</button>
 <!--ФОРМА ОТПРАВКИ ПИСЬМА-->
         <div class="visually-hidden">
           <p>Напишите нам</p>
@@ -213,12 +213,12 @@
     </section>
 
 <!--FOOTER иконки соц.сети-->
-    <footer>      
+    <footer>
       <div class="social">
         <a href="" class="socisl_link_vk"><div class="social_list"><div class="vk"></div></div></a>
         <a href="" class="social_link_fb"><div class="social_list"><div class="fb"></div></div></a>
-        <a href="" class="social_link_instagram"><div class="social_list"><div class="insta"></div></div></a> 
-      </div> 
+        <a href="" class="social_link_instagram"><div class="social_list"><div class="insta"></div></div></a>
+      </div>
       <div class="footer_txt">
         <p class="footer_txt_header">Давайте дружить, это выгодно!</p>
         <p class="footer_txt_p">Скидка 10% для друзей из социальныхсетей.</p>
